--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^5.12.11",
+    "gatsby": "^3.4.0",
+    "gatsby-adapter-netlify": "^1.0.4",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-sitemap": "^4.0.0",
@@ -38,6 +40,7 @@
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-rotating-text": "^1.4.1",
     "styled-components": "^5.3.0",
