--- a/package.json
+++ b/package.json
@@ -21,25 +21,26 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@netlify/plugin-gatsby": "^3.7.2",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "babel-plugin-styled-components": "^1.12.0",
+    "framer-motion": "^10.16.12",
     "gatsby": "^3.4.0",
     "gatsby-adapter-netlify": "^1.0.4",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-mdx": "^2.4.0",
-    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-plugin-styled-components": "^4.4.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-rotating-text": "^1.4.1",
@@ -47,6 +48,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "gatsby-plugin-netlify": "^5.1.1"
   }
 }
