--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "babel-plugin-styled-components": "^2.1.4",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.12",
     "gatsby": "^5.12.11",
     "gatsby-adapter-netlify": "^1.0.4",
