Removed Firebase and added Contentful cms

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "babel-plugin-styled-components": "^2.1.4",
-    "firebase": "^10.7.1",
+    "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "gatsby": "^5.12.11",
     "gatsby-adapter-netlify": "^1.0.4",
@@ -46,6 +46,7 @@
     "react-icons": "^4.12.0",
     "react-rotating-text": "^1.4.1",
     "styled-components": "^6.1.1",
+    "swr": "^2.2.4",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
